Fix Material dropdown menu overflow (#2299)

--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -46,6 +46,9 @@
     font-size: 0.95rem;
     height: 3rem; }
 
+.card {
+    overflow: initial; }
+
 .dropdown-toggle.dropdown-toggle-hidden::after {
     content: none !important; }
 
